# whenfree

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/static/: index.html  meeting.html
app/static/css/: styles.css
app/static/js/: common.js  index.js  meeting.js
